# QMC_option_pricing

./: .gitignore  README.md  citation.cff  pyproject.toml
Docs/: Documentation.md  INDEX.md
Examples/: Final_Comparison.ipynb  IS_Convergence.ipynb  MonteCarlo_Convergence.ipynb  Path_Dependent.ipynb  QMC_Convergence.ipynb  Sequence_testing.ipynb
Latex/: Writeup.tex
src/QMC_option_pricing/: Benchmark.py  IS_BlackScholes.py  MC_BlackScholes.py  MC_BlackSholes.py  QMC_BlackScholes.py  QMC_PathDependent.py  Sequence_generation.py  __init__.py
