[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "QMC_option_pricing"
version = "0.1.0"
description = "A package for option pricing under Black Scholes assumptions"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]